added svg search logo into main header

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/montreal" type="text/css"/>
+ 
     
     <meta
       name="description"
@@ -41,6 +42,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  
+  <script
+    src="https://kit.fontawesome.com/ab8447aa04.js"
+    crossorigin="anonymous"
+></script>
   </body>
 </html>
